--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,13 @@
-* {
+@import url(https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;
+
+700&display=swap);* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
 }
 
 ul {
@@ -44,5 +50,28 @@ header .container .links li a {
   text-transform: uppercase;
   color: grey;
   display: inline-block;
+}
+
+main .row {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+main .row .card {
+  text-align: center;
+  width: 300px;
+  box-shadow: 0px 0px 4px -2px #000000;
+  margin: 50px;
+  padding: 30px 0;
+}
+
+main .row .card h3 {
+  color: grey;
+  margin: 10px 0;
+}
+
+main .row .card .text {
+  font-size: 0.9rem;
 }
 
